--- a/index.css
+++ b/index.css
@@ -4,4 +4,24 @@
 
 body {
     margin: 0;
+    max-width: fit-content;
+}
+
+#container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.banner {
+    /*center in middle of screen */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(240, 11, 11, 0.5);
+    padding: 40px;
 }
