--- a/index.css
+++ b/index.css
@@ -15,14 +15,14 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .banner {
-    /*center in middle of screen */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: rgba(240, 11, 11, 0.5);
-    padding: 40px;
+    padding: 30px;
+    background-color: rgba(132, 131, 131, 0.5);
+    margin: 100px;
 }
