--- a/index.css
+++ b/index.css
@@ -17,12 +17,54 @@ body {
     pointer-events: none;
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    /* align-items: center; */
+    /* flex-direction: column; */
 }
 
 .banner {
     padding: 30px;
     background-color: rgba(132, 131, 131, 0.5);
     margin: 100px;
+}
+
+#darkness {
+    background-color: rgba(17, 16, 16, 0.9);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+#button {
+    margin-top: 10%;
+    background-color: #222722;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    text-align: center;
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 35px;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    pointer-events: auto;
+    cursor: pointer;
+    -webkit-box-shadow: 4px 4px 17px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 4px 9px 17px -9px rgba(0,0,0,0.75);
+    box-shadow: 4px 4px 17px -9px rgba(0,0,0,0.75);
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
