--- a/index.css
+++ b/index.css
@@ -1,3 +1,77 @@
+.screen {
+    position: absolute;
+    top: -85%;
+    left: 10%;
+    right: 10%;
+    height: calc(85% - 60px);
+    transition: all 1.5s ease-out;
+    -webkit-box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19) !important;
+    -moz-box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19) !important;
+    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19) !important;
+}
+#screencontent {
+    position: absolute;
+    top: 30px;
+    left: 10px;
+    right: 10px;
+    bottom: 30px;
+    color: rgb(17, 90, 14);
+    display: none;
+    margin: 3px;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.35);
+    font-family: 'Courier New', Courier, monospace;
+}
+#sTop {
+    top: 0;
+    width: 100%;
+    height: 30px;
+    background-color: black;
+    position: absolute;
+}
+#sLeft {
+    left: 0;
+    width: 10px;
+    height: 100%;
+    background-color: black;
+    position: absolute;
+}
+#sBottom {
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background-color: black;
+    position: absolute;
+}
+#sRight {
+    right: 0;
+    height: 100%;
+    width: 10px;
+    background-color: black;
+    position: absolute;
+}
+
+.screendown {
+    top: 0;
+}
+#screendarkness {
+    position: absolute;
+    background-color: #22222282;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+}
+#innerscreen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffff;
+}
+
 #canvas {
     position: relative;
     overflow: hidden;
@@ -17,14 +91,6 @@ body {
     pointer-events: none;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
-    /* flex-direction: column; */
-}
-
-.banner {
-    padding: 30px;
-    background-color: rgba(132, 131, 131, 0.5);
-    margin: 100px;
 }
 
 #darkness {
@@ -58,9 +124,9 @@ body {
     text-decoration: none;
     pointer-events: auto;
     cursor: pointer;
-    -webkit-box-shadow: 4px 4px 17px -9px rgba(0,0,0,0.75);
-    -moz-box-shadow: 4px 9px 17px -9px rgba(0,0,0,0.75);
-    box-shadow: 4px 4px 17px -9px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.1);
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
