--- a/index.css
+++ b/index.css
@@ -9,18 +9,34 @@
     -moz-box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19) !important;
     box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19) !important;
 }
+.text {    
+    color: rgb(17, 90, 14);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 34px;
+    margin-bottom: 14px;
+}
 #screencontent {
     position: absolute;
     top: 30px;
     left: 10px;
     right: 10px;
     bottom: 30px;
-    color: rgb(17, 90, 14);
+    background-color: rgba(255, 255, 255, 0.35);
     display: none;
     margin: 3px;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.35);
-    font-family: 'Courier New', Courier, monospace;
+    pointer-events: auto;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none;
+}
+.github {
+    flex: 1;
+    max-height: 150px;
+    cursor: pointer;
 }
 #sTop {
     top: 0;
@@ -102,6 +118,7 @@ body {
     height: 100%;
     display: none;
 }
+
 
 #button {
     position: absolute;
